--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.9.4",
     "@semantic-release/git": "^9.0.0",
+    "dotenv": "^16.4.7",
     "mocha": "^8.4.0",
     "semantic-release": "^17.4.3",
     "should": "^13.2.3"
@@ -55,7 +57,8 @@
   "scripts": {
     "start": "node bin/web.js",
     "test": "mocha --reporter list",
-    "semantic-release": "semantic-release"
+    "semantic-release": "semantic-release",
+    "lint:fix": "npx biome check --write --unsafe"
   },
   "release": {
     "branches": [
